--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                                     <th class="col-num">W</th>
                                     <th class="col-num">D</th>
                                     <th class="col-num">L</th>
-                                    <th class="col-num">GF</th>
-                                    <th class="col-num">GA</th>
+                                    <th class="col-num hide-mobile">GF</th>
+                                    <th class="col-num hide-mobile">GA</th>
                                     <th class="col-num">GD</th>
                                     <th class="col-num col-pts">Pts</th>
                                     <th class="col-form">Form</th>
