--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
 
                 <!-- Gameweek Fixtures -->
                 <section class="fixtures-section card">
-                    <h2>Gameweek <span id="selected-gameweek">-</span></h2>
+                    <div class="gw-nav">
+                        <button class="gw-nav-btn" id="gw-prev" title="Previous gameweek">‹</button>
+                        <h2>Gameweek <span id="selected-gameweek">-</span></h2>
+                        <button class="gw-nav-btn" id="gw-next" title="Next gameweek">›</button>
+                    </div>
                     <p class="gw-date" id="gw-date"></p>
                     <div class="table-wrapper">
                         <table id="fixtures-table">
@@ -93,6 +97,18 @@
                     </div>
                 </section>
             </div>
+
+            <!-- Avg Points by Kick-off Time -->
+            <section class="ko-heatmap-section card" id="ko-heatmap-section">
+                <h2>Avg Points per Game by Kick-off Time</h2>
+                <p class="section-sub">Colour scale: <span style="color:var(--red)">low</span> → <span style="color:var(--amber)">mid</span> → <span style="color:var(--green)">high</span>&ensp;·&ensp;Games played shown in brackets</p>
+                <div class="table-wrapper">
+                    <table id="ko-heatmap-table">
+                        <thead id="ko-heatmap-thead"></thead>
+                        <tbody id="ko-heatmap-tbody"></tbody>
+                    </table>
+                </div>
+            </section>
 
             <!-- Predicted Scores for next GW -->
             <section class="predictions-section card" id="predictions-section">
